<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lu.domi.sapphire.minimarket.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/checkout_toolbar_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="6dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/checkout_toolbar"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checkout_toolbar_appBarLayout">

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_arrow_back_white_48px"
                android:background="@color/clear"
                android:id="@+id/back_checkout_ImageButton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/title_checkout"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:textSize="@dimen/sz_title_toolbar"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:id="@+id/checkoutHeader_toolbar_TextView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:id="@+id/changeCurrency_checkout_spinner" />

            </LinearLayout>

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/checkout_toolbar_appBarLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">

            <lu.domi.sapphire.minimarket.view.HeaderTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start|bottom"
                android:textColor="@color/black"
                android:text="@string/checkout_header_item"
                android:textSize="@dimen/sz_content_card"
                android:id="@+id/entryName_checkoutCard_textView"
                android:layout_weight="1" />

            <lu.domi.sapphire.minimarket.view.HeaderTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="40dp"
                android:text="@string/checkout_header_quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/sz_content_card"
                android:gravity="bottom"
                android:id="@+id/entryQuantity_checkoutCard_textView" />

            <lu.domi.sapphire.minimarket.view.HeaderTextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/checkout_header_price"
                android:textColor="@color/black"
                android:textSize="@dimen/sz_content_card"
                android:gravity="bottom|end"
                android:id="@+id/rowTotal_checkoutCard_textView" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/totalDividerTop_checkout_textView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_entries_checkout_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/totalDividerBottom_checkout_textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="@dimen/cart_entry_card_height">

            <lu.domi.sapphire.minimarket.view.HeaderTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/checkout_total"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:textSize="@dimen/sz_content_card"
                android:textColor="@color/black"
                android:id="@+id/totalText_checkout_textView" />

            <lu.domi.sapphire.minimarket.view.HeaderTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cart_entry_card_height"
                android:gravity="center_vertical|end"
                android:textSize="@dimen/sz_content_card"
                android:textColor="@color/black"
                android:id="@+id/total_checkout_textView" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm_order"
            android:background="@color/yellow"
            android:id="@+id/checkout_cart_button"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp" />

    </LinearLayout>

</RelativeLayout>
